# Non-SPA-Instagram-St-with-Django

./: README.md  pyproject.toml
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_gender_user_phone_number.py  0003_user_avatar.py  0004_alter_user_avatar.py  0005_auto_20220104_0822.py
accounts/templates/accounts/: login_form.html  password_change_form.html  profile_edit_form.html  signup_form.html
askcompany/: urls.py
askcompany/settings/: common.py
askcompany/static/: jquery.form.min-4.3.0.js
askcompany/templates/: _form.html  layout.html  root.html
instagram/: forms.py  models.py  urls.py  views.py
instagram/migrations/: 0001_initial.py  0002_alter_post_photo.py  0003_auto_20220104_1222.py  0004_auto_20220104_1251.py  0005_auto_20220104_1402.py
instagram/templates/instagram/: _post_card.html  comment_form.html  index.html  post_detail.html  post_form.html  timeline_sidebar.html  timeline_sidebar_user_follow.html  user_page.html
