[tool.poetry]
name = "askcompany"
version = "0.1.0"
description = ""
authors = ["Jaesik <joje1283@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django-bootstrap4 = "^21.2"
django-pydenticon = "^0.2"
Django = "3.2"
easy-thumbnails = "^2.8"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

